--- a/css/master.css
+++ b/css/master.css
@@ -19,7 +19,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: #eee;
+  background-color: black;
 }
 
 a{
@@ -31,12 +31,32 @@ a{
   float: left;
   background-color: seagreen;
   overflow: hidden;
-  margin: 0 5%;
+}
+
+ul{
+  list-style: none;
+  padding: 0 5%;
+}
+ul li{
+  width: 20%;
+  padding: 0.5em;
+  font-size: 0.6em;
+}
+
+.navbar{
+  width: 90%;
+  margin: 2.5vh 5% 0 5%;
+}
+
+.navbar h3{
+  width: 100%;
+  padding: 1em;
 }
 
 .large {
   width: 90%;
   height: 40vh;
+  margin: 0 5%;
 }
 
 .large img{
@@ -46,8 +66,7 @@ a{
 
 .header{
   width: 90%;
-  margin-top: 0;
-  text-transform: uppercase;
+  margin:0 5%;
 }
 .header a{
   width: 100%;
@@ -64,6 +83,9 @@ a{
   height: 20vh;
   margin: 2.5vh 5%;
 
+}
+.uppercase{
+  text-transform: uppercase;
 }
 
 @media only screen and (min-width:600px) {
