--- a/css/master.css
+++ b/css/master.css
@@ -37,6 +37,8 @@ a{
 .navbar{
   width: 90%;
   margin: 2.5vh 5% 0 5%;
+  background-color: white;
+  color: #444;
 }
 
 .navbar ul{
@@ -79,9 +81,7 @@ a{
   width: 90%;
   margin:0 5%;
 }
-.header a{
 
-}
 .header h3{
   padding: 1em 0 0;
 }
@@ -89,37 +89,55 @@ a{
 .header h6{
   padding: 0.5em 0 2em 0;
 }
+
+.top{
+  background-color: black;
+  color: white;
+}
+
+.bottom {
+  background-color: white;
+  color: #444;
+}
+
 .press{
   width: 90%;
   margin: 2.5vh 5%;
+  color: #444;
+  background-color: white;
 }
 .about {
   width: 90%;
   margin: 2.5vh 5%;
   padding: 1em;
+  color: #444;
+  background-color: white;
+}
 
+.about img{
+  display: none;
 }
 
 .uppercase{
   text-transform: uppercase;
 }
 
-.black-bg{
-  background-color: black;
-  color: white;
-}
 
-.white-bg{
-  background-color: white;
-  color: #444;
-}
 
 @media only screen and (min-width:600px) {
   body{
     background-color: white;
   }
-  .header{
+  .bottom{
     display: none;
+  }
+
+
+  .top{
+    position: fixed;
+    margin: 60vh 0 0 5%;
+    background: transparent;
+    text-shadow:2px 1px 2px #000000;
   }
   .large{
     width: 100%;
@@ -127,19 +145,21 @@ a{
     margin: 0;
   }
 
-  .small{
-    width: 48.5%;
-    height: 26vh;
-    margin: 2vh 0 0 0;
+  .press, .about{
+    width: 49.5%;
+    height: 28vh;
+    margin: 1vh 0 0 0;
   }
 
   .press{
     background-color: #051e00;
+    position: relative;
   }
 
   .about{
     background-color: black;
-    margin-left: 3%;
+    margin-left: 1%;
+    position: relative;
   }
 
    .navbar{
@@ -147,6 +167,7 @@ a{
     margin: 5% 0 0 5%;
     position: fixed;
     opacity: .95;
+    background-color: #f4f4f4;
   }
 
   .navbar ul{
@@ -159,40 +180,62 @@ a{
   }
 
   .press a{
-    font-size: 2em;
+    width: 100%;
+    height: 30%;
+    font-size: 1em;
     text-align: center;
-    padding: 2em 1em;
     text-transform: uppercase;
-  }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
 
-  .about p{
-    font-size: 1.1em;
-    padding: 0 1em;
-  }
+
+
+
+  .about a{
+    overflow: auto;
+    width: 90%;
+    margin: auto;
+}
+
+.about a p{
+  width: 100%;
+  margin-top: 2em;
+}
+
 
   .about img{
-    margin-left: 1em;
+    display: block;
   }
 
 }
 
-@media only screen and (min-width:1024px) {
+@media only screen and (min-width:1100px) {
   .large {
-    width: 80%;
+    width: 75%;
     height: 100vh;
-    margin-right: 5%;
+    margin-right: 1%;
+  }
+
+  .top{
+    margin-top: 85vh;
   }
 
 
-
-  .small {
-    width: 12.5%;
-    height: 42.5vh;
+  .about, .press {
+    width: 24%;
+    height: 49vh;
+    margin: 0;
 
   }
-
-
-  div:nth-child(2) {
-    margin-bottom: 0;
+  .about{
+  margin: 2vh 0 0 0;
   }
+
+  .navbar{
+    width: 10.5%;
+  }
+
 }
