--- a/css/master.css
+++ b/css/master.css
@@ -1,13 +1,3 @@
-/* For testing only */
-
-
-
-.columns {
-  min-height: 100px;
-}
-
-/* End for testing */
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,7 +9,7 @@ body {
   background-color: black;
 }
 
-a{
+a {
   text-decoration: none;
   font-size: 0.85em;
   width: 100%;
@@ -34,14 +24,14 @@ a{
   overflow: hidden;
 }
 
-.navbar{
+.navbar {
   width: 90%;
   margin: 2.5vh 5% 0 5%;
   background-color: white;
   color: #444;
 }
 
-.navbar ul{
+.navbar ul {
   overflow: auto;
   list-style: none;
   background-color: #f4f4f4;
@@ -49,14 +39,13 @@ a{
   padding: 0;
 }
 
-.navbar ul li{
+.navbar ul a {
   width: 20%;
+  font-size: 0.7em;
   padding: 0.5em;
-  font-size: 0.6em;
-  z-index: 2;
 }
 
-.navbar h3{
+.navbar h3 {
   background-image: url("../img/logo-text.png");
   background-repeat: no-repeat;
   background-size: 126px auto;
@@ -72,25 +61,25 @@ a{
   margin: 0 5%;
 }
 
-.large img{
+.large img {
   width: 100%;
   height: 100%;
 }
 
-.header{
+.header {
   width: 90%;
   margin:0 5%;
 }
 
-.header h3{
+.header h3 {
   padding: 1em 0 0;
 }
 
-.header h6{
+.header h6 {
   padding: 0.5em 0 2em 0;
 }
 
-.top{
+.top {
   background-color: black;
   color: white;
 }
@@ -100,11 +89,15 @@ a{
   color: #444;
 }
 
-.press{
+.press {
   width: 90%;
   margin: 2.5vh 5%;
   color: #444;
   background-color: white;
+}
+.press h3, h6{
+  font-weight: normal;
+  font-size: 1em;
 }
 .about {
   width: 90%;
@@ -114,55 +107,22 @@ a{
   background-color: white;
 }
 
-.about img{
+.about img {
   display: none;
 }
 
-.uppercase{
+.uppercase {
   text-transform: uppercase;
 }
 
 
 
 @media only screen and (min-width:600px) {
-  body{
+  body {
     background-color: white;
   }
-  .bottom{
-    display: none;
-  }
 
-
-  .top{
-    position: fixed;
-    margin: 60vh 0 0 5%;
-    background: transparent;
-    text-shadow:2px 1px 2px #000000;
-  }
-  .large{
-    width: 100%;
-    height: 70vh;
-    margin: 0;
-  }
-
-  .press, .about{
-    width: 49.5%;
-    height: 28vh;
-    margin: 1vh 0 0 0;
-  }
-
-  .press{
-    background-color: #051e00;
-    position: relative;
-  }
-
-  .about{
-    background-color: black;
-    margin-left: 1%;
-    position: relative;
-  }
-
-   .navbar{
+  .navbar {
     width: 20%;
     margin: 5% 0 0 5%;
     position: fixed;
@@ -170,16 +130,55 @@ a{
     background-color: #f4f4f4;
   }
 
-  .navbar ul{
+  .navbar ul {
     text-align: left;
   }
 
-  .navbar ul li{
+  .navbar ul a {
     width: 100%;
     padding: 0.7em 1em;
   }
 
-  .press a{
+  .large {
+    width: 100%;
+    height: 70vh;
+    margin: 0;
+  }
+
+  .bottom {
+    display: none;
+  }
+
+  .top {
+    position: fixed;
+    margin: 60vh 0 0 5%;
+    background: transparent;
+    text-shadow:2px 1px 2px #000000;
+  }
+
+  .press, .about {
+    width: 49.5%;
+    height: 28vh;
+    margin: 1vh 0 0 0;
+  }
+
+   .press a, .about a {
+    color: #fff;
+    opacity: .8;
+  }
+
+  .press {
+    background-color: #051e00;
+    position: relative;
+  }
+
+  .about {
+    background-color: black;
+    margin-left: 1%;
+    position: relative;
+  }
+
+  .press a {
     width: 100%;
     height: 30%;
     font-size: 1em;
@@ -189,53 +188,51 @@ a{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    }
+  }
 
-
-
-
-  .about a{
+  .about a {
     overflow: auto;
     width: 90%;
     margin: auto;
-}
+  }
 
-.about a p{
-  width: 100%;
-  margin-top: 2em;
-}
+  .about a p {
+    width: 100%;
+    margin-top: 1.5em;
+  }
 
-
-  .about img{
+  .about img {
     display: block;
   }
 
 }
 
 @media only screen and (min-width:1100px) {
+  .navbar {
+    width: 10.5%;
+  }
+
   .large {
     width: 75%;
     height: 100vh;
     margin-right: 1%;
   }
 
-  .top{
+  .top {
     margin-top: 85vh;
   }
-
 
   .about, .press {
     width: 24%;
     height: 49vh;
     margin: 0;
-
   }
-  .about{
+
+  .press a, .about a {
+   font-size: 1.05em;
+  }
+
+  .about {
   margin: 2vh 0 0 0;
   }
-
-  .navbar{
-    width: 10.5%;
-  }
-
 }
