--- a/css/master.css
+++ b/css/master.css
@@ -95,10 +95,12 @@ a {
   color: #444;
   background-color: white;
 }
+
 .press h3, h6{
   font-weight: normal;
   font-size: 1em;
 }
+
 .about {
   width: 90%;
   margin: 2.5vh 5%;
@@ -115,15 +117,13 @@ a {
   text-transform: uppercase;
 }
 
-
-
 @media only screen and (min-width:600px) {
   body {
     background-color: white;
   }
 
   .navbar {
-    width: 20%;
+    width: 22%;
     margin: 5% 0 0 5%;
     position: fixed;
     opacity: .95;
@@ -136,7 +136,7 @@ a {
 
   .navbar ul a {
     width: 100%;
-    padding: 0.7em 1em;
+    padding: 1em 1.5em;
   }
 
   .large {
@@ -151,7 +151,7 @@ a {
 
   .top {
     position: fixed;
-    margin: 60vh 0 0 5%;
+    margin: 55vh 0 0 5%;
     background: transparent;
     text-shadow:2px 1px 2px #000000;
   }
@@ -165,6 +165,15 @@ a {
    .press a, .about a {
     color: #fff;
     opacity: .8;
+  }
+
+  .press h3 {
+    font-size: 1.5em;
+    padding-top: 0.5em;
+  }
+
+  .press h6 {
+    font-size: 0.7em;
   }
 
   .press {
@@ -204,7 +213,6 @@ a {
   .about img {
     display: block;
   }
-
 }
 
 @media only screen and (min-width:1100px) {
@@ -219,7 +227,7 @@ a {
   }
 
   .top {
-    margin-top: 85vh;
+    margin-top: 80vh;
   }
 
   .about, .press {
