--- a/css/master.css
+++ b/css/master.css
@@ -4,8 +4,6 @@
 }
 
 body {
-  width: 100%;
-  height: 100vh;
   background-color: black;
 }
 
@@ -14,11 +12,10 @@ a {
   font-size: 0.85em;
   width: 100%;
   height: 100%;
-  display: block;
-  padding: 1em;
   color: #444;
 
 }
+
 .column {
   float: left;
   overflow: hidden;
@@ -35,14 +32,13 @@ a {
   overflow: auto;
   list-style: none;
   background-color: #f4f4f4;
-  text-align: center;
   padding: 0;
 }
 
 .navbar ul a {
   width: 20%;
   font-size: 0.7em;
-  padding: 0.5em;
+  padding: 0.5em 0;
 }
 
 .navbar h3 {
@@ -50,9 +46,8 @@ a {
   background-repeat: no-repeat;
   background-size: 126px auto;
   background-position: left;
-  width: 95%;
+  height: auto;
   padding: 1em;
-  margin-left: 5%;
 }
 
 .large {
@@ -87,16 +82,18 @@ a {
 .bottom {
   background-color: white;
   color: #444;
+  padding-left: 1em;
 }
 
 .press {
+  padding-left: 1em;
   width: 90%;
   margin: 2.5vh 5%;
   color: #444;
   background-color: white;
 }
 
-.press h3, h6{
+.press h3, h6 {
   font-weight: normal;
   font-size: 1em;
 }
@@ -123,20 +120,21 @@ a {
   }
 
   .navbar {
-    width: 22%;
+    width: 160px;
+    padding: 0 0 1em 1em;
     margin: 5% 0 0 5%;
     position: fixed;
     opacity: .95;
     background-color: #f4f4f4;
   }
 
-  .navbar ul {
-    text-align: left;
+  .navbar h3{
+    margin: 0;
   }
 
   .navbar ul a {
     width: 100%;
-    padding: 1em 1.5em;
+    padding: 0.25em 0em;
   }
 
   .large {
@@ -184,7 +182,6 @@ a {
   .about {
     background-color: black;
     margin-left: 1%;
-    position: relative;
   }
 
   .press a {
@@ -200,7 +197,6 @@ a {
   }
 
   .about a {
-    overflow: auto;
     width: 90%;
     margin: auto;
   }
@@ -216,10 +212,6 @@ a {
 }
 
 @media only screen and (min-width:1100px) {
-  .navbar {
-    width: 10.5%;
-  }
-
   .large {
     width: 75%;
     height: 100vh;
@@ -241,6 +233,6 @@ a {
   }
 
   .about {
-  margin: 2vh 0 0 0;
+    margin: 2vh 0 0 0;
   }
 }
